# SystemC-Components-Test

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  conanfile.txt  simple_system.txlog
cmake/: Conan.cmake
etc/: irq_wave.sav  simple_system.launch
examples/: CMakeLists.txt
examples/ahb_bfm/: CMakeLists.txt  sc_main.cpp
examples/ahb_bfm_test/: CMakeLists.txt  sc_main.cpp
examples/simple_system/: CMakeLists.txt  gpio.cpp  gpio.h  plic.cpp  plic.h  sc_main.cpp  simple_system.cpp  simple_system.h  spi.cpp  spi.h  test_initiator.cpp  test_initiator.h  uart.cpp  uart.h
examples/transaction_recording/: CMakeLists.txt  scv_tr_recording_example.cpp
tests/: CMakeLists.txt
tests/io-redirector/: CMakeLists.txt  main.cpp
